homework/5.kubernetes-network/deployment-pgres.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pgres
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: pgres
    spec:
      containers:
      - image: postgres:10.13
        name: pgres
        ports:
        - containerPort: 5432
          protocol: TCP
        volumeMounts:
        - name: data
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: pgres
