homework/5.kubernetes-network/deployment-redmine.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pgres
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: pgres
    spec:
      containers:
      - image: redmine:4.1.1
        name: redmine
        ports:
        - containerPort: 3000
          protocol: TCP
